[gd_scene load_steps=7 format=3 uid="uid://d3qd2usosms6v"]

[ext_resource type="Script" path="res://scripts/Conductor.gd" id="1_2ml10"]
[ext_resource type="AudioStream" uid="uid://b8pqmka1suxur" path="res://sounds/sfx_step.wav" id="2_wshpn"]
[ext_resource type="AudioStream" uid="uid://ct887hdftx5q2" path="res://music/mus_highTension.ogg" id="3_66y4t"]
[ext_resource type="AudioStream" uid="uid://qewlud5m2t18" path="res://music/mus_goalJingle.ogg" id="4_4d2ls"]
[ext_resource type="AudioStream" uid="uid://cjvgdbmjm8adk" path="res://sounds/sfx_menuMove.wav" id="5_evp6h"]
[ext_resource type="AudioStream" uid="uid://ekmdss7w7qg1" path="res://sounds/sfx_menuSelect.wav" id="6_4u27n"]

[node name="Conductor" type="AudioStreamPlayer"]
bus = &"Music"
script = ExtResource("1_2ml10")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wshpn")
bus = &"Sound"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_66y4t")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="goalJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4d2ls")
volume_db = -2.0
bus = &"Music"

[node name="menuMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_evp6h")
bus = &"Sound"

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4u27n")
bus = &"Sound"
